# ClusterChatServer

./: CMakeLists.txt  README.md  autobuild.sh
config/: mysql.ini
example/jsonTest/: CMakeLists.txt  testjson.cpp
example/muduoTest/: CMakeLists.txt  main.cpp
example/mysqlTest/: CMakeLists.txt  main.cpp
include/common/: public.hpp
include/db/: Connection.h
include/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessagemodel.hpp  usemodel.hpp  user.hpp
include/muduo/: Channel.h  TcpConnection.h
include/redis/: redis.hpp
include/server/: chatServer.h  chatService.h
src/client/: client.cpp  client.hpp  main.cpp
src/server/: CMakeLists.txt  main.cpp
src/server/chat/: chatServer.cpp  chatService.cpp
src/server/db/: Connection.cpp  db.cpp  dbConnectionPool.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessagemodel.cpp  usemodel.cpp
src/server/muduo/: CMakeLists.txt  Channel.cc  EPollPoller.cc  TcpConnection.cc
src/server/redis/: redis.cpp
